--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,9 +8,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".RoRClientActivity" >
 
-    <TextView
+    <EditText
+        android:id="@+id/edittext"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        android:inputType="text"
+        />
+    <Button 
+        android:id="@+id/button"
+        android:text="register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+        android:layout_marginTop="100dip"
+        android:layout_marginLeft="200dip"
+        />
+    
 </RelativeLayout>
